[metadata]
name = snooker_ball_tracker
version = attr: src.snooker_ball_tracker.__version__
description = Demo app that tracks balls on a Snooker table
author = Daniel Black
author_email = danielcrblack@gmail.com

[options]
include_package_data = True
package_dir=
    =src
packages=find:
install_required =
    numpy
    imutils
    opencv-python
    pyqt5

[options.packages.find]
where=src